Fix far too large bottom margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -309,7 +309,7 @@ nav.stick {
 footer {
     text-align: center;
     color: RGBA(0, 0, 0, 0.75);
-    margin-bottom: 1000px;
+    margin-bottom: 100px;
 }
 
 footer small a {
